<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/backk"
    android:weightSum="10"
    tools:context=".ScanText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="serif"
            android:gravity="start"
            android:text="@string/text_scanner"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_result"
            android:textSize="24sp"
            android:fontFamily="serif"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/jusscanres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textStyle="normal|bold" />

</ScrollView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scan_buttonn"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/round_button"
                android:fontFamily="serif"
                android:text="@string/start_scan"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/PDF_button"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/round_button3"
                android:fontFamily="serif"
                android:text="@string/save_as_pdf"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/text_button"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button2"
                android:fontFamily="serif"
                android:text="@string/save_as_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/DOC_button"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:background="@drawable/round_button4"
                android:fontFamily="serif"
                android:text="@string/save_as_doc"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>